# databricks-devbox

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api-reference/: index.html
app/: app.py  app.yaml  cc.py  devbox.yaml  requirements.txt  version.py  vibe_code.py
architecture/: index.html
architecture/go-binary/: index.html
architecture/process-management/: index.html
architecture/web-ui/: index.html
authentication/: index.html
authentication/databricks-integration/: index.html
authentication/tokens/: index.html
code-server/: index.html
code-server/extension-marketplace/: index.html
code-server/vs-code-differences/: index.html
coding-assistants/: index.html
coding-assistants/caveats/: index.html
coding-assistants/claude-code/: index.html
coding-assistants/claude-code-router/: index.html
coding-assistants/codex/: index.html
coding-assistants/gemini/: index.html
configuration/: index.html
configuration/devbox-yaml/: index.html
configuration/extension-groups/: index.html
configuration/packaged-assets/: index.html
databricks_devbox_go/: assets.go  config.go  go.mod  go.sum  log_manager.go  main.go  process_manager.go  proxy.go  routes.go
databricks_devbox_go/web_ui_dist/: index.html
docs/: README.md  api-reference.md  authentication.md  index.md
docs/architecture/: go-binary.md  index.md  process-management.md  web-ui.md
installation/: index.html
lha_code_server_go/: go.mod  go.sum  logger.go  main.go  process_manager.go  proxy.go  routes.go
search/: search_index.json
web_ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+45 files in other folders)
