[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-devbox"
version = "0.1.0"
description = "Databricks Devbox Management UI with React and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["databricks_devbox"]
