[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-devbox"
version = "0.1.0"
description = "Databricks Devbox Management UI with React and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests"
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["databricks_devbox"]

[tool.uv.workspace]
members = [
    "workspace/d3e59fbd-bc8d-4ddd-82ab-cc50ce7cc2fc",
]
